[gd_scene load_steps=2 format=3 uid="uid://iij477d0ue0k"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_0ld7m"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_0ld7m")

[node name="SpawnPosition" type="Node2D" parent="."]

[node name="SpawnPosition01" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 50)

[node name="SpawnPosition02" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 175)

[node name="SpawnPosition03" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 300)

[node name="SpawnPosition04" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 425)

[node name="SpawnPosition05" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 550)

[node name="SpawnPosition06" type="Marker2D" parent="SpawnPosition"]
position = Vector2(1350, 675)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="pathEnemyTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="pathEnemyTimer" to="." method="_on_path_enemy_timer_timeout"]
